+++ New backgrounds for prescription entries * Fixed the overflow problem for prescriptions' annotations

--- a/ProjectSyri/styles/main.css
+++ b/ProjectSyri/styles/main.css
@@ -113,10 +113,8 @@ h1{
 .vaccine-entry-a{
     background-color:rgb(88,220,145);
     background-image:url(../styles/images/backv1.png);
-    background-position:right top;
+    background-position:right bottom;
     background-repeat:no-repeat;
-    /*border-style:outset;*/
-    /*border-color:rgb(88,220,145);*/
 }
 
 .vaccine-entry-b{
@@ -124,8 +122,6 @@ h1{
     background-image:url(../styles/images/backv2.png);
     background-position:left top;
     background-repeat:no-repeat;
-    /*border-style:outset;*/
-    /*border-color:rgb(88,220,145);*/
 }
 
 .vaccine-title{
@@ -145,10 +141,18 @@ h1{
 }
 
 /* PRESCRIPTION ENTRIES */
-.prescription-entry{
+.prescription-entry-a{
     background-color:rgb(134,190,231);
-    border-style:outset;
-    border-color:rgb(134,190,231);
+    background-image:url(../styles/images/backp1.png);
+    background-position:right bottom;
+    background-repeat:no-repeat;
+}
+
+.prescription-entry-b{
+    background-color:rgb(186,212,232);
+    background-image:url(../styles/images/backp2.png);
+    background-position:right bottom;
+    background-repeat:no-repeat;
 }
 
 .prescription-title{
@@ -172,6 +176,8 @@ h1{
     color:rgb(0,0,0);
     padding-bottom:10px;
     padding-left:15px;
+    padding-right:15px;
+    white-space:nowrap;
     overflow:hidden;
     text-overflow:ellipsis;
 }
